--- a/react_webviews/src/dashboard/MyAccount/MyAccount.scss
+++ b/react_webviews/src/dashboard/MyAccount/MyAccount.scss
@@ -13,8 +13,44 @@
       .account-head-title {
         padding: 20px 10px 10px 20px;
         font-weight: 600;
-        color: var(--default);
+        color: var(--gunmetal);
         font-size: 16px;
+      }
+
+      .ma-kir-title {
+        font-size: 10px;
+        letter-spacing: 1px;
+      }
+
+      .my-account-investment-card {
+        display: flex;
+        align-items: center;
+        padding: 0 20px 20px 20px;
+
+        .maic-content {
+          margin-right: 30px;
+          min-width: 120px;
+          display: flex;
+          flex-direction: column;
+          align-items: flex-start;
+
+          .maic-title {
+            color: var(--gunmetal);
+            line-height: 21px;
+            font-size: 13px;
+            font-weight: 500;
+          }
+
+          .maic-title-disable {
+            color: var(--steelgrey);
+          }
+
+          .maic-subtitle {
+            color: var(--steelgrey);
+            line-height: 8px;
+            font-size: 8px;
+          }
+        }
       }
 
       .account-options {
@@ -24,7 +60,7 @@
         cursor: pointer;
         display: flex;
         align-items: center;
-        color: #333333;
+        color: var(--default);
         img {
           width: 25px;
           margin-right: 15px;
