bottom sheet update

--- a/react_webviews/src/2fa/components/commonStyles.scss
+++ b/react_webviews/src/2fa/components/commonStyles.scss
@@ -52,8 +52,8 @@
 
   .img-password{
     margin: 45px 0px 30px 0px;
-    min-height: 80px;
-    min-width: 46px;
+    height: 46px;
+    width: 80px;
   }
 
 }
