--- a/react_webviews/src/login_and_registration/pages/Login/Login.scss
+++ b/react_webviews/src/login_and_registration/pages/Login/Login.scss
@@ -134,7 +134,7 @@
   }
 }
 
-@media only screen and (max-height: 900px) {
+@media only screen and (max-width: 450px) {
   .whatsapp-consent{
     position: absolute;
     bottom: 80px;
