--- a/react_webviews/src/login_and_registration/pages/SecondaryVerification/secondaryVerification.scss
+++ b/react_webviews/src/login_and_registration/pages/SecondaryVerification/secondaryVerification.scss
@@ -54,7 +54,7 @@
   }
   
   
-  @media only screen and (max-height: 900px) {
+  @media only screen and (max-width: 450px) {
     .whatsapp-consent{
       position: absolute;
       bottom: 80px;
