--- a/react_webviews/src/login_and_registration/pages/Login/commonStyles.scss
+++ b/react_webviews/src/login_and_registration/pages/Login/commonStyles.scss
@@ -21,6 +21,17 @@
         .MuiSelect-root {
           margin-bottom: 8px;
         }
+
+        .MuiInput-underline.Select {
+          &::before, &::after {
+            height: 0px !important;
+          }
+          .MuiSelect-select {
+            padding-right: 20px;
+            padding-left: 5px;
+            margin-right: 5px;
+          }
+        }
       }
     }
 
