Added new finity assets

--- a/react_webviews/src/common/ui/Steps/WVSteps.scss
+++ b/react_webviews/src/common/ui/Steps/WVSteps.scss
@@ -27,11 +27,11 @@
     }
 
     .wv-sh-number-completed {
-      background-color: var(--secondary) !important;
+      background-color: var(--secondary-green) !important;
     }
     
     .wv-sh-number-pending {
-      background-color: #FFDA2C !important;
+      background-color: var(--mustard) !important;
     }
 
     #wv-sh-title {
