--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1095,6 +1095,7 @@ body[data-device="mobile"] {
  */
 
  .dot-flashing-parent {
+  height: 22px;
   min-height: 22px;
   display: flex;
   align-items: center;
