--- a/react_webviews/src/login_and_registration/pages/Login/Login.scss
+++ b/react_webviews/src/login_and_registration/pages/Login/Login.scss
@@ -39,12 +39,14 @@
     display: -ms-flexbox;
     display: flex;
     -ms-flex-pack: center;
-    justify-content: center;
+    justify-content: space-around;
     column-gap: 36px;
     padding: 10px 10px 10px 0;
+    width: 40%;
+    margin: auto;
     margin-bottom: 20px;
     cursor: pointer;
-
+    
     .underline {
       width: 20px;
       height: 2px;
@@ -120,7 +122,7 @@
 
     .login-type {
       justify-content: flex-start;
-
+      margin-left: 0px;
       .underline {
         margin: 5px 0;
       }
