--- a/react_webviews/src/common/ui/BottomSheet/WVBottomSheet.scss
+++ b/react_webviews/src/common/ui/BottomSheet/WVBottomSheet.scss
@@ -1,9 +1,12 @@
 body[data-device="web"]{
   .wv-bottomsheet{
     .MuiDialog-paper {
+      position: relative;
       position: unset;
       width: 100%;
+      bottom: auto;
       bottom: unset;
+      left: auto;
       left: unset;
       border-radius: 8px;
     }
