--- a/react_webviews/src/desktopLayout/InvestInfo.scss
+++ b/react_webviews/src/desktopLayout/InvestInfo.scss
@@ -1,4 +1,5 @@
 .info-box{
+  width: 100%;
   .info-box-header{
     color: #73727a;
     font-weight: 600;
@@ -11,6 +12,9 @@
     .info-box-data{
       display: flex;
       align-items: center;
+      width: 100%;
+      margin-left: auto;
+      margin-right: auto;
       max-width: 460px;
       .info-data-left{
         img{
