--- a/react_webviews/src/desktopLayout/NavList.scss
+++ b/react_webviews/src/desktopLayout/NavList.scss
@@ -66,7 +66,7 @@
     font-size: 12px;
     margin-top: 20px;
     color: #c4c4c4;
-    margin-bottom: 0;
+    margin-bottom: 10px;
     line-height: normal;
     text-align: left;
   }
