--- a/react_webviews/src/feedback/FeedBack.scss
+++ b/react_webviews/src/feedback/FeedBack.scss
@@ -34,6 +34,7 @@
     padding: 5px 15px;
     font-size: 14px;
     border-radius: 5px;
+    height: 47px;
     min-height: 47px;
     font-weight: bold;
     margin: 0px !important;
