Renamed tax2win to tax filing

--- a/react_webviews/src/reports/components/Summary/commonStyles.scss
+++ b/react_webviews/src/reports/components/Summary/commonStyles.scss
@@ -109,11 +109,11 @@
       }
     }
 
-    .reports-tax2win-card {
+    .reports-tax-filing-card {
       cursor: pointer;
       padding: 5px 0 15px 15px;
 
-      .rt2w-card-title {
+      .rtf-card-title {
         padding-top: 10px;
         color: var(--gunmetal);
         font-size: 17px;
@@ -121,19 +121,19 @@
         font-weight: bold;
       }
 
-      .rt2w-card-subtitle {
+      .rtf-card-subtitle {
         color: var(--steelgrey);
         font-size: 13px;
         line-height: 19px;
         margin-top: 8px;
       }
 
-      .rt2w-card-image {
+      .rtf-card-image {
         max-width: 150px;
         min-height: 80px;
       }
 
-      .rt2w-know-more {
+      .rtf-know-more {
         color: var(--secondary);
         letter-spacing: 1px;
         font-size: 12px;
