--- a/react_webviews/src/dashboard/MyAccount/MyAccount.scss
+++ b/react_webviews/src/dashboard/MyAccount/MyAccount.scss
@@ -29,7 +29,7 @@
       }
 
       .my-acct-tag{
-        color: limegreen;
+        color: var(--secondary-green);
         background-color: white;
         float: right;
         margin-right: 15px;
@@ -40,7 +40,7 @@
       }
 
       .my-acct-verified-tag{
-        background-color: limegreen;
+        background-color: var(--secondary-green);
         color: white;
         border-radius: 100px;
         height: 16px;
@@ -65,6 +65,7 @@
       .ma-kir-title {
         font-size: 10px;
         letter-spacing: 1px;
+        padding-top: 0;
       }
 
       .my-account-investment-card {
