--- a/react_webviews/src/gold/components/Style.scss
+++ b/react_webviews/src/gold/components/Style.scss
@@ -640,6 +640,13 @@ img.gold-offer-slide-img {
     height: 30px !important;
     margin: 0;
   }
+
+  .download-fisdom-text{
+    font-size: 14px;
+    font-weight: bold;
+    text-align: left;
+    margin-top: 50px;
+  }
 }
 
 .send-invoice {
