baxa flow for webapp

--- a/react_webviews/src/group_insurance/common/Style.scss
+++ b/react_webviews/src/group_insurance/common/Style.scss
@@ -2056,3 +2056,10 @@
   margin-top: 50px;
   height: 230px;
 }
+
+.download-fisdom-text{
+  font-size: 14px;
+  font-weight: bold;
+  text-align: left;
+  margin-top: 50px;
+}
