--- a/react_webviews/src/kyc/Equity/components/commonStyles.scss
+++ b/react_webviews/src/kyc/Equity/components/commonStyles.scss
@@ -139,7 +139,7 @@
     }
 
     .kaim-terms {
-      padding: 20px 0 30px;
+      padding-top: 40px;
       display: flex;
       align-items: center;
       font-size: 13px;
