--- a/react_webviews/src/internal_wealth_dashboard/mini-components/Style.scss
+++ b/react_webviews/src/internal_wealth_dashboard/mini-components/Style.scss
@@ -593,6 +593,8 @@ ul#iwd-bars {
   text-align: center;
   cursor: pointer;
   text-transform: uppercase;
+  position: relative;
+  z-index: 5;
 }
 
 .iwd-profile-icon__primary {
