--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -1392,6 +1392,7 @@ $header-title-font-size: 20px;
   margin-left: auto;
   display: flex;
   align-items: center;
+  cursor: pointer;
 }
 
 .main-top-title-new2 {
