--- a/react_webviews/src/login_and_registration/pages/Login/Login.scss
+++ b/react_webviews/src/login_and_registration/pages/Login/Login.scss
@@ -121,8 +121,9 @@
     }
 
     .login-type {
-      justify-content: flex-start;
+      justify-content: space-between;
       margin-left: 0px;
+      width: 120px;
       .underline {
         margin: 5px 0;
       }
