Added primary bank verification from my account

--- a/react_webviews/src/kyc/Bank/BanksList.scss
+++ b/react_webviews/src/kyc/Bank/BanksList.scss
@@ -59,6 +59,7 @@
           vertical-align: middle;
           box-sizing: border-box;
           cursor: pointer;
+          margin-left: 5px;
         }
       }
 
