--- a/react_webviews/src/kyc/Bank/BankDetails.scss
+++ b/react_webviews/src/kyc/Bank/BankDetails.scss
@@ -46,6 +46,7 @@
           vertical-align: middle;
           box-sizing: border-box;
           cursor: pointer;
+          margin-left: 5px;
         }
       }
 
