--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -1409,6 +1409,7 @@ $header-title-font-size: 20px;
 .main-top-title-header {
   @include main-top-title-header-base();
   color: #160d2e;
+  flex-basis: 100%;
 }
 
 .main-top-title-header-old {
