Renamed WVListItem component as per component naming convention

--- a/react_webviews/src/common/ui/ListItem/WVListItem.scss
+++ b/react_webviews/src/common/ui/ListItem/WVListItem.scss
@@ -1,3 +1,7 @@
+.wv-list-item-container +.wv-list-item-container {
+  margin-top: 20px;
+}
+
 .wv-list-item-icon {
   margin-right: 25px;
   align-self: flex-start;
