Fixed image loading in kyc premium & status dialog

--- a/react_webviews/src/dashboard/Invest/mini-components/mini-components.scss
+++ b/react_webviews/src/dashboard/Invest/mini-components/mini-components.scss
@@ -403,6 +403,14 @@
   }
 }
 
+.kyc-pld-right-icon {
+  min-width: 160px;
+}
+
+.kyc-sd-right-icon {
+  min-width: 120px;
+}
+
 //////////////// End of common bottom sheet dialog Landing /////////
 
 
