--- a/react_webviews/src/kyc/Equity/components/commonStyles.scss
+++ b/react_webviews/src/kyc/Equity/components/commonStyles.scss
@@ -41,6 +41,11 @@
     .kaih-text {
       padding: 10px 0;
     }
+
+    .kyc-ai-header-icon {
+      width: 112px !important;
+      min-height: 74px;
+    }
   }
 
   .kyc-account-info-main {
@@ -69,9 +74,10 @@
         margin-right: 20px;
         color: var(--steelgrey);
 
-        img {
+        .kaim-benefits-icon {
           border-radius: 8px;
-          width: 170px;
+          width: 170px !important;
+          height: 90px !important;
         }
 
         .kaim-benefits-info-text {
@@ -170,9 +176,10 @@
     padding-bottom: 10px;
   }
 
-  img {
+  .spi-img {
     width: 100%;
-    padding-bottom: 20px;
+    min-height: 165px;
+    margin-bottom: 20px !important;
   }
 }
 
@@ -189,6 +196,11 @@
     line-height: 32px;
     color: var(--dark);
     padding-bottom: 20px;
+
+    .kyc-dv-header-icon {
+      width: 110px !important;
+      min-height: 74px;
+    }
   }
 
   .kyc-document-verification-main {
