--- a/react_webviews/src/kyc/Upload/commonStyles.scss
+++ b/react_webviews/src/kyc/Upload/commonStyles.scss
@@ -19,9 +19,10 @@
     display: flex;
     justify-content: center;
     margin: 20px 0 10px 0;
-    img {
+    .kyc-ui-icon {
       display: block;
       margin: 0 auto;
+      min-height: 160px;
     }
   }
 
@@ -67,6 +68,11 @@
 
     .image {
       position: relative;
+
+      .icon {
+        min-width: 70px;
+        min-height: 60px;
+      }
 
       .check-icon {
         position: absolute;
@@ -135,6 +141,10 @@
 
     .ipv-initial-asset {
       @include d-flex-center();
+
+      .default {
+        min-height: 132px;
+      }
     }
   }
 
