--- a/react_webviews/src/kyc/mini-components/mini-components.scss
+++ b/react_webviews/src/kyc/mini-components/mini-components.scss
@@ -63,6 +63,10 @@
       padding: 15px 0 5px 0;
     }
 
+    .kyc-kmdc-img {
+      min-height: 132px;
+    }
+
     .aadhar:hover {
       background-color: var(--on-hover-background);
     }
@@ -357,6 +361,7 @@
       width: 100%;
       border-radius: 6px;
       margin-bottom: 5px;
+      min-height: 100px;
     }
   }
 
