Fixed img loading in journey screen

--- a/react_webviews/src/kyc/Journey/Journey.scss
+++ b/react_webviews/src/kyc/Journey/Journey.scss
@@ -11,6 +11,11 @@
     align-self: flex-start;
     margin-left: 20px;
   }
+
+  .kyc-pj-icon {
+    width: 126px !important;
+    min-height: 96px;
+  }
 }
 
 .kyc-journey .kyc-pj-bottom {
