Fixed image loading in digilocker

--- a/react_webviews/src/kyc/Digilocker/Digilocker.scss
+++ b/react_webviews/src/kyc/Digilocker/Digilocker.scss
@@ -11,6 +11,11 @@
 
   .esign-steps .doc {
     margin-bottom: 30px;
+
+    .doc-icon {
+      width: 54px !important;
+      height: 54px !important;
+    }
   }
 
   .esign-steps .doc .doc-name {
@@ -55,6 +60,7 @@
     min-width: 314px;
     max-width: 100%;
     margin: 30px auto 20px auto;
+    min-height: 120px;
   }
 
   .body-text1 {
