--- a/react_webviews/src/desktopLayout/DesktopLayout.scss
+++ b/react_webviews/src/desktopLayout/DesktopLayout.scss
@@ -75,7 +75,7 @@
     margin-left: 300px !important;
     position: fixed !important;
     width: calc(100% - 300px) !important;
-    max-width: 100% !important;
+    max-width: var(--desktop-width) !important;
     height: initial !important;
   }
 
