Added support for footer content centerin in WVFullscreenDialog

--- a/react_webviews/src/common/ui/FullscreenDialog/WVFullscreenDialog.scss
+++ b/react_webviews/src/common/ui/FullscreenDialog/WVFullscreenDialog.scss
@@ -18,4 +18,10 @@
 .wv-fd-close {
   cursor: pointer;
 }
-  
+
+.wv-fd-footer {
+  &.wv-fdf-centered {
+    display: flex;
+    justify-content: center;
+  }
+}
