--- a/react_webviews/src/dashboard/Invest/commonStyles.scss
+++ b/react_webviews/src/dashboard/Invest/commonStyles.scss
@@ -96,9 +96,33 @@
 .page-campaign-callback {
   text-align: center;
   font-size: 16px;
-  
+
   .page-campaign-callback-titile {
     font-size: 30px;
     margin: 20px 0;
+  }
+}
+
+.sl-terms-and-conditions-content {
+  color: var(--default);
+
+  .sl-tac-message {
+    margin-top: 20px;
+
+    img {
+      width: 15px;
+      height: 15px;
+      margin-right: 10px;
+    }
+
+    b {
+      font-weight: 600;
+    }
+  }
+
+  .lvb-tac-list {
+    ul li {
+      padding: 10px 0;
+    }
   }
 }
