Add image support for WVInPageHeader

--- a/react_webviews/src/common/ui/InPageHeader/commonStyles.scss
+++ b/react_webviews/src/common/ui/InPageHeader/commonStyles.scss
@@ -2,6 +2,12 @@
   margin-bottom: 30px;
 }
 
+.wv-iph-with-img {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .wv-ip-title {
   font-weight: bold;
   font-size: 20px;
