Fix styling issues for WVListItem

--- a/react_webviews/src/common/ui/ListItem/WVListItem.scss
+++ b/react_webviews/src/common/ui/ListItem/WVListItem.scss
@@ -15,7 +15,7 @@
 }
 
 .wv-list-item-ruler {
-  background-color: var(--primaryVariant1);
+  background-color: var(--whitegrey);
   height: 1px;
   margin-top: 19px;
 }
