--- a/react_webviews/src/internal_wealth_dashboard/mini-components/Style.scss
+++ b/react_webviews/src/internal_wealth_dashboard/mini-components/Style.scss
@@ -17,12 +17,12 @@ $card-padding: 50px;
   text-align: inherit;
   margin-top: 10px;
 
-  div {
+  &.spinner > div {
     margin-left: 5px;
-    background: #c4adff;
+    background-color: #c4adff;
   }
 
-  div.bounce1 {
+  &.spinner > div.bounce1 {
     margin-left: 0;
   }
 }
