Reduced delay for profile animation IWD

--- a/react_webviews/src/internal_wealth_dashboard/animate.scss
+++ b/react_webviews/src/internal_wealth_dashboard/animate.scss
@@ -23,7 +23,7 @@
   }
   & + #iwd-profile-short #iwd-profile-icon {
     opacity: 0;
-    transition: opacity 0.3s ease-out 0.2s;
+    transition: opacity 0.3s ease-out;
   }
 }
 .boxEffect-enter-active {
