--- a/react_webviews/src/kyc/Journey/Journey.scss
+++ b/react_webviews/src/kyc/Journey/Journey.scss
@@ -160,7 +160,7 @@
     margin-left: 10px;
     font-weight: 500;
     letter-spacing: 1px;
-    display: block;
+    display: inline-block;
   }
 }
 
