Fixed edit condition & added bg color for testing

--- a/react_webviews/src/kyc/Journey/Journey.scss
+++ b/react_webviews/src/kyc/Journey/Journey.scss
@@ -137,6 +137,11 @@
   display: flex;
   justify-content: space-between;
   align-items: flex-start;
+  background-color: orange;
+
+  .title-value {
+    background-color: yellowgreen;
+  }
 
   .edit {
     color: var(--secondary);
@@ -161,6 +166,7 @@
     font-weight: 500;
     letter-spacing: 1px;
     display: inline-block;
+    background-color: yellow;
   }
 }
 
