--- a/react_webviews/src/common/ui/InfoBubble/WVInfoBubble.scss
+++ b/react_webviews/src/common/ui/InfoBubble/WVInfoBubble.scss
@@ -1,7 +1,7 @@
 .wv-info-bubble {
   display: flex;
   width: 100%;
-  align-items: end;
+  align-items: flex-start;
   padding: 10px 12px;
   border-radius: 4px;
 
@@ -23,6 +23,10 @@
         font-weight: 600;
         font-size: 13px;
         line-height: 21px;
+      }
+
+      img {
+        cursor: pointer;
       }
     }
     
