copy changes in kyc

--- a/react_webviews/src/kyc/Equity/mini-components/mini-components.scss
+++ b/react_webviews/src/kyc/Equity/mini-components/mini-components.scss
@@ -38,6 +38,7 @@
   line-height: 14px;
   letter-spacing: 1px;
   text-transform: uppercase;
+  margin-top: 5px;
 }
 
 .communication-details-otp-container {
