Skeleton UI fixes for Suspense Fallbacks

--- a/react_webviews/src/common/theme/Style.css
+++ b/react_webviews/src/common/theme/Style.css
@@ -11,12 +11,12 @@ html,
 body,
 #root {
   height: 100%;
-  background-color: #fff;
+  /* background-color: #fff; */
 }
 html,
 body[data-device="web"] #root {
   height: 100%;
-  background: #f3f4f6;
+  /* background: #f3f4f6; */
 }
 body[data-device="web"] {
   height: 100%;
