--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -25,7 +25,7 @@ html,
 body,
 #root {
   height: 100%;
-  background-color: #fff;
+  // background-color: #fff;
   @include fadein-animation-base()
 }
 
@@ -35,7 +35,7 @@ html,
 body[data-device="web"] #root {
   /* autoprefixer: off */
   height: 100%;
-  background: #f3f4f6;
+  // background: #f3f4f6;
 }
 
 button {
