--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -1552,3 +1552,23 @@ padding-right: 12px !important;
 .yellow .circle {
   background: #f7b500; 
 }
+
+.call-back-popup-button {
+  padding: 10px 0;
+  width: 100%;
+  margin-bottom: -5px;
+  background-color: var(--secondary);
+  color: white;
+  border: none;
+  padding: 16px 0;
+  border-radius: 5px;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: 0.1px;
+  text-transform: uppercase;
+
+  &:hover {
+    background-color: var(--on-hover-background);
+  }
+}
