Minor fixes for etf consent
- api params changed to query params
- styling fixes

--- a/react_webviews/src/kyc_esign/components/Style.scss
+++ b/react_webviews/src/kyc_esign/components/Style.scss
@@ -197,3 +197,11 @@ $text-color1: var(--steelgrey);
     }
   }
 }
+
+.etf-tnc {
+  padding-left: 20px;
+  font-size: 11px;
+  line-height: 18px;
+  margin: 0;
+  color: var(--steelgrey);
+}
