--- a/react_webviews/src/common/ui/FullscreenDialog/WVFullscreenDialog.scss
+++ b/react_webviews/src/common/ui/FullscreenDialog/WVFullscreenDialog.scss
@@ -3,6 +3,10 @@
     margin: 0 !important;
   }
 
+  .MuiDialogContent-root {
+    padding: 0 20px 20px;
+  }
+
   .MuiDialogActions-root {
     padding: 20px !important;
     margin: 0 !important;
