--- a/react_webviews/src/account_statements/pages/GenerateStatements.scss
+++ b/react_webviews/src/account_statements/pages/GenerateStatements.scss
@@ -1,9 +1,5 @@
-.acc-statements-field-title {
-  font-weight: 500;
-  font-size: 15px;
-  line-height: 24px;
-  color: var(--dark);
-  margin-bottom: 10px;
+.account-statement {
+  padding-bottom: 90px !important;
 }
 
 .as-radio-field {
@@ -14,6 +10,59 @@
 
     .MuiFormControlLabel-root + .MuiFormControlLabel-root {
       margin-left: 80px;
+    }
+  }
+}
+
+.as-fy-picker {
+  margin-bottom: 30px;
+
+  .react-select__menu {
+    z-index: 2;
+  }
+}
+
+.as-date-picker {
+  margin-bottom: 20px;
+
+  label {
+    display: block;
+    margin-bottom: 5px;
+    font-size: 11px !important;
+
+    &::first-letter {
+      text-transform: uppercase;
+    }
+  }
+
+  .error-radiogrp {
+    top: 0;
+    margin-left: 10px;
+    font-size: 11px;
+  }
+
+  .rs-picker-toggle-placeholder {
+    color: var(--steelgrey) !important;
+  }
+  
+  .rs-picker-toggle.rs-btn-lg {
+    z-index: 1;
+    padding-top: 14px;
+    padding-bottom: 14px;
+    font-size: 13px;
+    
+    .rs-picker-toggle-clean {
+      right: 45px;
+      font-size: 16px;
+      top: 12px !important;
+    }
+    
+    .rs-picker-toggle-value {
+      color: var(--dark) !important;
+    }
+
+    .rs-picker-toggle-caret {
+      color: var(--primary) !important;
     }
   }
 }
