--- a/react_webviews/src/tax_filing/pages/Landing.scss
+++ b/react_webviews/src/tax_filing/pages/Landing.scss
@@ -1,5 +1,9 @@
-.tax-filing-landing .wv-card {
+.tax-filing-entry-card {
   background: var(--primary);
+}
+
+.tax-filing-option-card {
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.12), 0px 2px 2px rgba(0, 0, 0, 0.05);
 }
 
 .tax-filing-faq-section {
@@ -39,4 +43,12 @@
   display: block;
   width: 30px;
   height: 30px;
+}
+
+.tax-filing-whyefile-divider {
+  height: 8px;
+  width: 1px;
+  background: var(--steelgrey);
+  position: relative;
+  top: 52px;
 }
