added transparentize to bacground color

--- a/react_webviews/src/tax_filing/pages/Steps.scss
+++ b/react_webviews/src/tax_filing/pages/Steps.scss
@@ -1,5 +1,5 @@
 .tax-filing-advantages-icon {
-  background-color: var(--primaryVariant1);
+  background-color: transparentize(#DFD8EF, 0.5);
 }
 
 .tax-filing-advantages-icon__finity {
