fixed breaking style fix in web for redirection

--- a/react_webviews/src/tax_filing/pages/Redirection.scss
+++ b/react_webviews/src/tax_filing/pages/Redirection.scss
@@ -1,3 +1,7 @@
+.tax-filing-redirection-container {
+  position: static !important;
+}
+
 .tax-filing-redirection {
   position: absolute;
   top: 0;
