Fixes: QA-5426, QA-5429, QA-5431, QA-5432, QA-5433, QA-5434, QA-5435, QA-5436, QA-5464, QA-5465, QA-5496, QA-5497, QA-5500, QA-5501, QA-5508, QA-5509
Issue was caused due to some old styles for checkbox overriding custom MUI theme style. Removed the old styling

--- a/react_webviews/src/common/theme/Style.scss
+++ b/react_webviews/src/common/theme/Style.scss
@@ -427,6 +427,7 @@ body[data-device="web"] {
   .FlexItem1-withProvider-footer {
     flex: inherit;
     cursor: pointer;
+    margin-right: 20px;
   }
 
   .FlexItem2-withProvider-footer {
@@ -570,11 +571,6 @@ body[data-device="web"] .Container {
 
 .TextCenter {
   text-align: center;
-}
-
-.Checkbox {
-  width: auto;
-  height: auto;
 }
 
 .SameAddress {
