--- a/react_webviews/src/group_insurance/products/term_insurance/Style.css
+++ b/react_webviews/src/group_insurance/products/term_insurance/Style.css
@@ -162,10 +162,10 @@
     margin-bottom: 30px;
   }
   
-  .Checkbox {
+  /* .Checkbox {
     width: auto;
     height: auto;
-  }
+  } */
   
   .error-radiogrp {
     /* margin: 0; */
