Added button loader for FHC page transitions

--- a/react_webviews/src/fhc/components/Style.scss
+++ b/react_webviews/src/fhc/components/Style.scss
@@ -11,6 +11,7 @@
   .landing-img {
     max-width: 257px;
     max-height: 296px;
+    margin: auto !important;
   }
   .landing-text {
     margin-top: 68px;
