Styling and content changes for WEBAPP-1925

--- a/react_webviews/src/login_and_registration/components/commonStyles.scss
+++ b/react_webviews/src/login_and_registration/components/commonStyles.scss
@@ -10,7 +10,7 @@
   .details {
     display: flex;
     align-items: center;
-    flex-basis: 40%;
+    flex: 1 0 auto;
   }
 }
 // End of Account already exists Dialog
