Fixed mandates status color mapping

--- a/react_webviews/src/kyc/Bank/BankDetails.scss
+++ b/react_webviews/src/kyc/Bank/BankDetails.scss
@@ -82,15 +82,15 @@
       color: #160d2e;
     }
 
-    .verified {
+    .approved {
       color: #35cb5d;
     }
 
-    .failed {
+    .rejected {
       color: #d0021b;
     }
 
-    .underprocess {
+    .in_progress {
       color: #ffd01f;
     }
   }
