--- a/react_webviews/src/dashboard/Invest/mini-components/mini-components.scss
+++ b/react_webviews/src/dashboard/Invest/mini-components/mini-components.scss
@@ -39,6 +39,11 @@
     }
   }
 
+  .bfdla-logo-container {
+    width: 100%;
+    margin:  0 auto;
+  }
+
   .bfdla-content {
     text-align: center;
     color: var(--gunmetal);
@@ -66,6 +71,10 @@
 
   .bfdla-action-bar {
     width: 100%;
+
+    .footer-image {
+      width: 100%;
+    }
   }
 }
 
