Fixed: icon view for money control desktop layout

--- a/react_webviews/src/kyc/Upload/commonStyles.scss
+++ b/react_webviews/src/kyc/Upload/commonStyles.scss
@@ -51,8 +51,10 @@
       line-height: 31px;
     }
 
-    img {
+    .kup-top-image {
       margin-left: 20px;
+      width: 110px !important;
+      min-height: 70px;
     }
   }
 
