MODIFY: replaced ListItemText with custom element, as the mui5 theme was breaking.

--- a/react_webviews/src/desktopLayout/NavList.scss
+++ b/react_webviews/src/desktopLayout/NavList.scss
@@ -42,6 +42,10 @@
 
     .nav-link-text {
       padding-left: 0px;
+      color: rgba(0, 0, 0, 0.87);
+      font-size: 16px;
+      font-weight: 400;
+      line-height: 24px;
     }
 
     .nav-link-listItem.active {
