--- a/react_webviews/src/designSystem/molecules/LandingHeader/LandingHeader.scss
+++ b/react_webviews/src/designSystem/molecules/LandingHeader/LandingHeader.scss
@@ -3,3 +3,16 @@
     justify-content: center;
     flex-direction: column;
 }
+
+.center-align {
+    align-items: center;
+}
+
+.lh-subtitle {
+    max-width: 99ch;
+    margin-top: 8px;
+}
+
+.lh-date-wrapper {
+    margin-top: 4px;
+}
