MODIFY: added width and height to the icon of collapse molecule.

--- a/react_webviews/src/designSystem/molecules/Collapse/Collapse.scss
+++ b/react_webviews/src/designSystem/molecules/Collapse/Collapse.scss
@@ -14,6 +14,8 @@
 
     .c-icon-wrapper {
         margin-left: 8px;
+        height: 24px;
+        width: 24px;
     }
     
     .c-child-wrapper {
