MODIFY: added width to the small and large variant of Category card.

--- a/react_webviews/src/designSystem/molecules/CategoryCard/CategoryCard.scss
+++ b/react_webviews/src/designSystem/molecules/CategoryCard/CategoryCard.scss
@@ -4,6 +4,11 @@
     justify-content: center;
     align-items: center;
     width: max-content;
+    width: 103px;
+}
+
+.cc-wrapper-large-variant {
+    width: 159px;
 }
 
 .cc-lg-subtitle {
