Using Tile from mini-components

--- a/react_webviews/src/freedom_plan/commonStyles.scss
+++ b/react_webviews/src/freedom_plan/commonStyles.scss
@@ -26,6 +26,10 @@
     }
   }
 
+  .generic-hr {
+    margin-top: 10px;
+  }
+  
   .fpps-total-amount {
     font-weight: 500;
     font-size: 16px;
