--- a/react_webviews/src/designSystem/atoms/Timeline/Timeline.scss
+++ b/react_webviews/src/designSystem/atoms/Timeline/Timeline.scss
@@ -1,6 +1,7 @@
 .atom-timeline {
   text-align: center;
-  font-size: 12px;
-  font-weight: 700;
   line-height: 40px;
+  display: inline-block;
+  width: 40px;
+  height: 40px;
 }
