--- a/react_webviews/src/freedom_plan/mini-components/mini-components.scss
+++ b/react_webviews/src/freedom_plan/mini-components/mini-components.scss
@@ -21,6 +21,7 @@
       padding: 10px;
       position: relative;
       margin: 0 15px 15px 0;
+      cursor: pointer;
 
       .selected-icon {
         position: absolute;
