MODIFY: added cursor as pointer to card. 2. removed padding from image. 3. added onClick handler on the parent.

--- a/react_webviews/src/designSystem/molecules/CategoryCard/CategoryCard.scss
+++ b/react_webviews/src/designSystem/molecules/CategoryCard/CategoryCard.scss
@@ -3,8 +3,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: max-content;
     width: 103px;
+    cursor: pointer;
 }
 
 .cc-wrapper-large-variant {
