MODIFY: added min-width to card vertical

--- a/react_webviews/src/designSystem/molecules/CardVertical/CardVertical.scss
+++ b/react_webviews/src/designSystem/molecules/CardVertical/CardVertical.scss
@@ -2,8 +2,10 @@
     padding: 16px;
     display: flex;
     flex-direction: column;
-    max-width: max-content;
+    min-width: 168px;
+    width: max-content;
     background-color: white;
+    cursor: pointer;
 }
 
 .cv-elevation {
