--- a/react_webviews/src/designSystem/molecules/CardHorizontal/CardHorizontal.scss
+++ b/react_webviews/src/designSystem/molecules/CardHorizontal/CardHorizontal.scss
@@ -8,6 +8,8 @@
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  min-width: 339px;
+  cursor: pointer;
 }
 
 .ch-hero-wrapper {
