ADD: fixed the width of card Vertical

--- a/react_webviews/src/designSystem/molecules/CardVertical/CardVertical.scss
+++ b/react_webviews/src/designSystem/molecules/CardVertical/CardVertical.scss
@@ -2,7 +2,7 @@
     padding: 16px;
     display: flex;
     flex-direction: column;
-    min-width: 168px;
+    width: 168px;
     background-color: white;
     cursor: pointer;
 }
