Fixed get all plans api & handling freedomPlanData

--- a/react_webviews/src/freedom_plan/mini-components/mini-components.scss
+++ b/react_webviews/src/freedom_plan/mini-components/mini-components.scss
@@ -6,6 +6,12 @@
     height: 122px;
     align-items: center;
 
+    .sfpc-loader {
+      width: 110px !important;
+      height: 88px !important;
+      margin: 0 15px 15px 0 !important;
+    }
+
     .freedom-plan-option {
       border: 1px solid #dcdee6;
       border-radius: 12px;
