--- a/react_webviews/src/freedom_plan/pages/PlanReview.scss
+++ b/react_webviews/src/freedom_plan/pages/PlanReview.scss
@@ -20,6 +20,7 @@
       line-height: 17px;
       color: var(--steelgrey);
       padding-top: 10px;
+      text-transform: lowercase;
     }
   }
 
