using freedom data list from api

--- a/react_webviews/src/freedom_plan/mini-components/mini-components.scss
+++ b/react_webviews/src/freedom_plan/mini-components/mini-components.scss
@@ -68,6 +68,10 @@
     line-height: 18px;
     color: var(--steelgrey);
   }
+
+  .error-message {
+    color: var(--red);
+  }
 }
 
 .freedom-plan-terms-n-conditions {
