--- a/react_webviews/src/designSystem/molecules/FeatureCard/FeatureCard.scss
+++ b/react_webviews/src/designSystem/molecules/FeatureCard/FeatureCard.scss
@@ -4,7 +4,7 @@
   box-shadow: 0px 6px 12px -6px rgba(0, 0, 0, 0.04),
     0px 0px 1px rgba(0, 0, 0, 0.2);
   border-radius: 12px;
-  min-width: 344px;
+  width: 344px;
   cursor: pointer;
 
   .fc-divider {
