Fixed payment url && reset freedom plan data on exit

--- a/react_webviews/src/freedom_plan/mini-components/mini-components.scss
+++ b/react_webviews/src/freedom_plan/mini-components/mini-components.scss
@@ -37,6 +37,10 @@
         right: -9px;
       }
 
+      .fpo-name {
+        text-transform: uppercase;
+      }
+
       .fpo-amount {
         font-size: 16px;
         line-height: 21px;
