MODIFY: Collapsible Section 1. updated naming to CollapsibleSection. 2. added data-aid.

--- a/react_webviews/src/designSystem/molecules/CollapsibleSection/CollapsibleSection.scss
+++ b/react_webviews/src/designSystem/molecules/CollapsibleSection/CollapsibleSection.scss
@@ -1,6 +1,7 @@
 .c-wrapper {
     background-color: white;
     border-radius: 12px;
+    cursor: pointer;
 
     .c-label-wrapper {
         background-color: white;
