MODIFY: Estimation Card. 1. Added data-aid 2. for now showing infoIcon. 3. Added propTypes.

--- a/react_webviews/src/designSystem/molecules/EstimationCard/EstimationCard.scss
+++ b/react_webviews/src/designSystem/molecules/EstimationCard/EstimationCard.scss
@@ -1,10 +1,14 @@
-.ec-kw-title-wrapper {
+.ec-wrapper {
+  cursor: pointer;
+
+  .ec-kw-title-wrapper {
     display: flex;
     flex-direction: row;
     align-items: center;
-}
+  }
 
-.ec_info_icon {
+  .ec_info_icon {
     margin-left: 8px;
     cursor: pointer;
+  }
 }
