--- a/react_webviews/src/designSystem/molecules/HighlightInfo/HighlightInfo.scss
+++ b/react_webviews/src/designSystem/molecules/HighlightInfo/HighlightInfo.scss
@@ -1,10 +1,10 @@
 .hi-wrapper {
-    padding: 16px 10.5px;
+    padding: 10.5px 16px;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    background: linear-gradient(180deg, rgba(51, 207, 144, 0.2) 27.54%, rgba(130, 121, 248, 0.13) 100%);
     border-radius: 4px;
+    cursor: pointer;
 
     .hi-img-wrapper {
         margin-left: 10px;
