--- a/react_webviews/src/designSystem/molecules/FilterNavigation/FilterNavigation.scss
+++ b/react_webviews/src/designSystem/molecules/FilterNavigation/FilterNavigation.scss
@@ -3,26 +3,34 @@
   background-color: white;
   box-shadow: 0px 6px 12px -6px rgba(0, 0, 0, 0.04),
     0px 0px 1px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
 
-  .filter-nav-list {
+  .filter-nav-item {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
     align-items: center;
-
-    .filter-nav-item {
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        margin-right: 24px;
-        cursor: pointer;
-        &:last-child{
-            margin-right: 0px;
-        }
+    margin-right: 24px;
+    cursor: pointer;
+    &:last-child {
+      margin-right: 0px;
     }
+  }
 
-    .filter-nav-badge-wrapper {
-        margin-left: 16px;
+  .filter-nav-badge {
+    margin-left: 8px;
+    border-radius: 100%;
+    height: 20px;
+    width: 20px;
+    position: relative;
+
+    .filter-nav-badge-text {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
     }
   }
 }
